--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
       </ul>
     </div>
     <div class="centrar-form">
-      <input type="button" value="guardar" />
+      <input
+        id="mensaje"
+        type="button"
+        value="guardar"
+        onclick="mensaje_dos()"
+      />
     </div>
     <script src="./js/app.js"></script>
   </body>
