--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         onclick="mensaje_dos()"
       />
     </div>
+    <div class="caja" onclick="evento()">Click normal de Mouse</div>
+    <div class="caja" oncontextmenu="evento2()">Click derecho de Mouse</div>
+    <div class="caja" ondblclick="evento3()">Click derecho de Mouse</div>
+
     <script src="./js/app.js"></script>
   </body>
 </html>
