--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   </head>
   <body>
     <h1>curso de Javascript DOM</h1>
-    <div class="cursos-youtube">
-      <ul class="listas-cursos">
-        <li class="list">java</li>
-        <li class="list">python</li>
-        <li class="list">dart</li>
-      </ul>
+
+    <div id="caja">
+      <input type="text" id="input" />
     </div>
+
+    <div class="caja" onclick="evento()">Click normal de Mouse</div>
+    <div class="caja" oncontextmenu="evento2()">Click derecho de Mouse</div>
+    <div class="caja" ondblclick="evento3()">Click derecho de Mouse</div>
+
     <div class="centrar-form">
       <input
         id="mensaje"
@@ -24,9 +26,14 @@
         onclick="mensaje_dos()"
       />
     </div>
-    <div class="caja" onclick="evento()">Click normal de Mouse</div>
-    <div class="caja" oncontextmenu="evento2()">Click derecho de Mouse</div>
-    <div class="caja" ondblclick="evento3()">Click derecho de Mouse</div>
+
+    <div class="cursos-youtube">
+      <ul class="listas-cursos">
+        <li class="list">java</li>
+        <li class="list">python</li>
+        <li class="list">dart</li>
+      </ul>
+    </div>
 
     <script src="./js/app.js"></script>
   </body>
